deploy/new/base/allinone-shared/bootstrap-http-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bootstrap-ingressroute-grpc-8089
  namespace: allinone-miner
spec:
  entryPoints:
    - bootstrap-grpc
  routes:
  - match: HostSNI(`bootstrap.allinone-miner.ubsv.dev`)
    services:
    - name: bootstrap-service
      port: 8089
  tls:
    passthrough: true
